Fix scroll snap and padding on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ html {
 @media (max-width: 639px) {
   html {
     scroll-snap-type: y mandatory;
-    scroll-padding-top: 80px;
+    scroll-padding-top: 0px;
   }
 }
 
